test/good/classes/super05.px

class A def
    func f(Int x) [Int] def
        return [x*2]

class B(A) def
    func f(Int x) [Int] def
        return [super(i) for i in x..x+1][1]

print(B().f(2))
